# ts-services

./: .gitignore  README-DOCS.md  config.json  jest.config.js  jest.config.ts  nodejs.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  test.html  test.json  test2.txt  test_rust_file.rs  tsconfig.docs.json  tsconfig.json  tsconfig.module.json  tsconfig.test.json
scripts/: process-test-targets.ts  test-docs.ts
services/: AgentManager.ts  GeneratorManager.ts  Manager.dt.ts  check.ts  commonTypes.dt.ts  generationPrompts.ts  index.ts  replaceHtml.ts  test.ts
services/agentManagement/: AgentManager.ts  Agents.dt.ts  agentManager.dt.ts  agentManager.ts
services/agents/: agentManager.dt.ts  agentManager.ts
services/anthropic/: anthropic.ts  anthropicPromptTemplate.ts
services/dataIngestion/: DataIngestor.ts  DirectoryParser.ts  extractJSX.ts  parseTypescript.ts
services/generatorManagement/: Generator.dt.ts  GeneratorManager.ts  HTTPClient.ts
services/promptManagement/: promptManager.dt.ts  promptManager.ts
services/promptManager/: promptManager.dt.ts  (+1 more)
src/: commonTypes.dt.ts  document-code.ts  documentCode.ts  index.ts  test.ts
src/data-Ingestor/external_programs/extract_rust_blocks/: Cargo.toml
src/data-Ingestor/external_programs/extract_rust_blocks/src/: main.rs
test/: documentation-generator.test.ts  testPythonExtractor.ts  testRustExtractor.ts  testRustIntegration.ts
test-output/: docs.json  test-docs.json
tests/: AgentArtificial.html  AgentArtificial2.html  check.ts  message.json  messages.json  run.json  status.json  thread.json
(+79 files in other folders)
