[package]
name = "extract_rust_blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "1.0.109", features = ["full", "extra-traits", "parsing", "printing", "visit"] }
quote = "1.0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
proc-macro2 = "1.0.76"
unindent = "0.2"
thiserror = "1.0"
